syntax = "proto3";

package go.micro.service.post;

service PostService {
	// Query currently only supports read by slug or timestamp, no listing.
	rpc Query(QueryRequest) returns (QueryResponse) {}
	rpc Post(PostRequest) returns (PostResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message Post {
	string id = 1;
	string title = 2;
	string slug = 3;
	string content = 4;
	int64 timestamp = 5;
	repeated string tagNames = 6;
}

message QueryRequest {
	string slug = 1;
	string timestamp = 2;
}

message QueryResponse {
	repeated Post posts = 1;
}

message PostRequest {
	Post post = 1;
}

message PostResponse {
	Post post = 1;
}

message DeleteRequest {
	string slug = 1;
}

message DeleteResponse {
}

